# experimental-browser

./: LICENSE  README.md  connection.py  logging.config  main.py  pyproject.toml  window.py
.github/workflows/: python-app.yml
scripts/: create_issues.py
src/: browser.css  connection.py  css.py  dom.py  fonts.py  layout.py  tree_utils.py  window.py
test/: test_dom.py  test_window.py
tests/: test_connection.py  test_css.py  test_dom.py
tests/fixtures/: book.css  complex.html  simple.html
