[tool.poetry]
name = "experimental-browser"
version = "0.1.0"
description = ""
authors = ["Tzvi Friedman <tadwork@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "experimental_browser"}]

[tool.poetry.dependencies]
python = "^3.10"
certifi = "^2023.5.7"


[tool.poetry.group.dev.dependencies]
pluggy = "^1.2.0"
packaging = "^23.1"
iniconfig = "^2.0.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
